[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/LostVectorSheet.png" type="Texture" id=1]
[ext_resource path="res://LostVectorGun.tscn" type="PackedScene" id=2]
[ext_resource path="res://LostVectorPlate.tscn" type="PackedScene" id=3]
[ext_resource path="res://LostVectorArm.tscn" type="PackedScene" id=4]
[ext_resource path="res://LostVector.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Spin"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Spin"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 16.0

[node name="LostVector" type="Sprite" groups=["Actor"]]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 48, 48 )
script = ExtResource( 5 )

[node name="Plates" type="Node2D" parent="."]
z_index = -1

[node name="UpperPlate" parent="Plates" instance=ExtResource( 3 )]
position = Vector2( 0, -26 )
rotation = -1.5708
blockPlayer = true

[node name="Gun1030" parent="Plates/UpperPlate" instance=ExtResource( 2 )]
position = Vector2( 1.90735e-06, -26 )
rotation = -0.785398
scale = Vector2( 1, 1 )

[node name="Gun0000" parent="Plates/UpperPlate" instance=ExtResource( 2 )]
position = Vector2( 7, 3.0598e-07 )

[node name="Gun0130" parent="Plates/UpperPlate" instance=ExtResource( 2 )]
position = Vector2( -5.72205e-06, 26 )
rotation = 0.785398

[node name="LowerPlate" parent="Plates" instance=ExtResource( 3 )]
position = Vector2( 0, 26 )
rotation = 1.5708
blockPlayer = true

[node name="Gun0430" parent="Plates/LowerPlate" instance=ExtResource( 2 )]
position = Vector2( -1.90735e-06, -26 )
rotation = -0.785398

[node name="Gun0600" parent="Plates/LowerPlate" instance=ExtResource( 2 )]
position = Vector2( 7, -3.0598e-07 )

[node name="Gun0730" parent="Plates/LowerPlate" instance=ExtResource( 2 )]
position = Vector2( 1.90735e-06, 26 )
rotation = 0.785398

[node name="Spin" type="AnimationPlayer" parent="Plates"]
autoplay = "Spin"
anims/RESET = SubResource( 1 )
anims/Spin = SubResource( 2 )

[node name="Arms" type="Node2D" parent="."]

[node name="RightArm" parent="Arms" instance=ExtResource( 4 )]
position = Vector2( 56, 0 )

[node name="LeftArm" parent="Arms" instance=ExtResource( 4 )]
position = Vector2( -56, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Spin" type="AnimationPlayer" parent="Arms"]
anims/RESET = SubResource( 3 )
anims/Spin = SubResource( 4 )

[node name="Area" type="Area2D" parent="."]

[node name="Circle" type="CollisionShape2D" parent="Area"]
shape = SubResource( 5 )

[editable path="Plates/UpperPlate/Gun1030"]
[editable path="Plates/UpperPlate/Gun0130"]
[editable path="Plates/LowerPlate/Gun0430"]
[editable path="Plates/LowerPlate/Gun0730"]
